--- a/app/views/enforcement/v1/upload/enforcement-notice.html
+++ b/app/views/enforcement/v1/upload/enforcement-notice.html
@@ -36,10 +36,10 @@
       </h1>
 
       <div class="govuk-form-group">
-        <label class="govuk-label govuk-label--m" for="appealsub-{{version}}-appealdocuments-plansdrawings-files">
+        <label class="govuk-label govuk-label--m" for="enforcement-uploaded-notice">
           Drag and drop or choose a file
         </label>
-        <input class="govuk-file-upload pins-file-upload" id="appealsub-{{version}}-appealdocuments-plansdrawings-files" name="appealsub-{{version}}-appealdocuments-plansdrawings-files" type="file" multiple>
+        <input class="govuk-file-upload pins-file-upload" id="enforcement-uploaded-notice" name="enforcement-uploaded-notice" type="file" multiple>
       </div>
 
       {{ govukDetails({
