--- a/app/views/enforcement/v1/upload/obligation-ready.html
+++ b/app/views/enforcement/v1/upload/obligation-ready.html
@@ -39,7 +39,7 @@
         <label class="govuk-label govuk-label--m" for="appealsub-{{version}}-appealdocuments-plansdrawings-files">
           Drag and drop or choose a file
         </label>
-        <input class="govuk-file-upload pins-file-upload" id="appealsub-{{version}}-appealdocuments-plansdrawings-files" name="appealsub-{{version}}-appealdocuments-plansdrawings-files" type="file" multiple>
+        <input class="govuk-file-upload pins-file-upload" id="enforcement-uploaded-planning-obligation" name="enforcement-uploaded-planning-obligation" type="file" multiple>
       </div>
 
       {{ govukDetails({
