--- a/app/views/enforcement/v1/upload/planning-obligation-status.html
+++ b/app/views/enforcement/v1/upload/planning-obligation-status.html
@@ -44,12 +44,12 @@
         },
         items: [
           {
-            value: "ready",
+            value: "Finalised and ready to submit",
             text: "Finalised and ready to submit",
             checked: checked("enforcement-planning-obligation-status", "Finalised and ready to submit")
           },
           {
-            value: "draft",
+            value: "In draft",
             text: "In draft",
             checked: checked("enforcement-planning-obligation-status", "In draft")
           },
