--- a/app/views/enforcement/v1/upload/obligation-draft.html
+++ b/app/views/enforcement/v1/upload/obligation-draft.html
@@ -40,10 +40,10 @@
       </p>
 
       <div class="govuk-form-group">
-        <label class="govuk-label govuk-label--m" for="appealsub-{{version}}-appealdocuments-plansdrawings-files">
+        <label class="govuk-label govuk-label--m" for="enforcement-uploaded-draft-planning-obligation">
           Drag and drop or choose a file
         </label>
-        <input class="govuk-file-upload pins-file-upload" id="appealsub-{{version}}-appealdocuments-plansdrawings-files" name="appealsub-{{version}}-appealdocuments-plansdrawings-files" type="file" multiple>
+        <input class="govuk-file-upload pins-file-upload" id="enforcement-uploaded-draft-planning-obligation" name="enforcement-uploaded-draft-planning-obligation" type="file" multiple>
       </div>
 
       {{ govukDetails({
