--- a/app/views/index.html
+++ b/app/views/index.html
@@ -64,7 +64,7 @@ service-start{% extends "layout.html" %}
                       text: "WIP"
                     }) }}
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
-                      Appeal a householder planning decision enforcement - Version 1
+                      Appeal an enforcement notice - Version 1
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <li><a href="/before-you-start/v11">Before you start</a></li>
