--- a/app/views/enforcement/v1/declaration.html
+++ b/app/views/enforcement/v1/declaration.html
@@ -43,6 +43,7 @@
           <li>this is your only opportunity to submit the appeal</li>
           <li>if you have not included all the information we've requested, we may not be able to progress your appeal</li>
           <li>we will contact you about any missing information, but this may delay your appeal​</li>
+          <li>you can change your selected grounds of appeal up to 6 weeks after submitting your appeal. To do this, contact <a href="" class="govuk-link">enquiries@planninginspectorate.gov.uk</a></li>
         </ul>
         <p class="govuk-body">
           You also confirm that you've completed all sections and the details are correct to the best of your knowledge.
@@ -52,10 +53,10 @@
           The gathering and subsequent processing of the personal data supplied by you in this form is in accordance with the terms of our registration under the Data Protection Act 2018. Further information can be found in our <a href="javascript:preventDefault();">Privacy Notice</a> and <a href="javascript:preventDefault();">Terms and Conditions</a>.
         </div>
 
-        {{ govukWarningText({
+        <!-- {{ govukWarningText({
           text: "Once you submit your appeal, you cannot add to or change it.",
           iconFallbackText: "Warning"
-        }) }}
+        }) }} -->
 
         {{ govukButton({
           href: "confirmation",
