Removal of feedback link from phase banner in BYS

--- a/app/views/appellant-submission/v15/before-you-start/removal-variation-conditions.html
+++ b/app/views/appellant-submission/v15/before-you-start/removal-variation-conditions.html
@@ -10,7 +10,7 @@ What type of planning permission do the conditions apply to? - Before you start 
     tag: {
       text: "Beta"
     },
-    html: 'This is a new service - your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+    html: 'This is a new service.'
   }) }}
   {{ govukBackLink({
     text: "Back",
