--- a/app/views/appellant-submission/v15/before-you-start/planning-department.html
+++ b/app/views/appellant-submission/v15/before-you-start/planning-department.html
@@ -11,7 +11,7 @@
     tag: {
       text: "Beta"
     },
-    html: 'This is a new service - your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+    html: 'This is a new service.'
   }) }}
 {% endblock %}
 
