--- a/app/views/appellant-submission/v15/before-you-start/shutter/out-of-time-full.html
+++ b/app/views/appellant-submission/v15/before-you-start/shutter/out-of-time-full.html
@@ -5,6 +5,15 @@
   You cannot appeal - {{serviceName}} - GOV.UK
 {% endblock %}
 
+{% block beforeContent %}
+  {{ govukPhaseBanner({
+    tag: {
+      text: "Beta"
+    },
+    html: 'This is a new service.'
+  }) }}
+{% endblock %}
+
 {% block content %}
 
   <div class="govuk-grid-row">
