Fixes to Grounds status issues

--- a/app/views/enforcement/v1/appeal-site/other-appeals.html
+++ b/app/views/enforcement/v1/appeal-site/other-appeals.html
@@ -24,7 +24,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/endgrounds" method="post">
+      <form action="/otherappeals" method="post">
 
         <span class="govuk-caption-l">
           Tell us about the appeal site
