--- a/app/views/enforcement/v1/grounds/groundA-file.html
+++ b/app/views/enforcement/v1/grounds/groundA-file.html
@@ -108,7 +108,7 @@
         }) }}
       {% else %}
         {{ govukButton({
-          href: "late-application",
+          href: "application",
           text: "Continue"
         }) }}
       {% endif %}
