--- a/app/views/enforcement/v1/grounds/groundB-file.html
+++ b/app/views/enforcement/v1/grounds/groundB-file.html
@@ -102,7 +102,7 @@
           }) }}
         {% else %}
           {{ govukButton({
-            href: "late-application",
+            href: "application",
             text: "Continue"
           }) }}
         {% endif %}
