--- a/app/views/enforcement/v1/grounds/groundB-text.html
+++ b/app/views/enforcement/v1/grounds/groundB-text.html
@@ -87,7 +87,7 @@
           }) }}
         {% else %}
           {{ govukButton({
-            href: "late-application",
+            href: "application",
             text: "Continue"
           }) }}
         {% endif %}
