--- a/app/views/enforcement/v1/grounds/groundC-text.html
+++ b/app/views/enforcement/v1/grounds/groundC-text.html
@@ -82,7 +82,7 @@
           }) }}
         {% else %}
           {{ govukButton({
-            href: "late-application",
+            href: "application",
             text: "Continue"
           }) }}
         {% endif %}
