--- a/app/views/enforcement/v1/grounds/groundD-text.html
+++ b/app/views/enforcement/v1/grounds/groundD-text.html
@@ -77,7 +77,7 @@
           }) }}
         {% else %}
           {{ govukButton({
-            href: "late-application",
+            href: "application",
             text: "Continue"
           }) }}
         {% endif %}
