--- a/app/views/enforcement/v1/grounds/groundF-text.html
+++ b/app/views/enforcement/v1/grounds/groundF-text.html
@@ -67,7 +67,7 @@
           }) }}
         {% else %}
           {{ govukButton({
-            href: "late-application",
+            href: "application",
             text: "Continue"
           }) }}
         {% endif %}
