--- a/app/views/enforcement/v1/grounds/groundG-text.html
+++ b/app/views/enforcement/v1/grounds/groundG-text.html
@@ -70,7 +70,7 @@
 
         
         {{ govukButton({
-          href: "late-application",
+          href: "application",
           text: "Continue"
         }) }}
 
