--- a/app/views/enforcement/v1/check-your-answers.html
+++ b/app/views/enforcement/v1/check-your-answers.html
@@ -368,7 +368,7 @@
             </dd>
           </div>
 
-          {% if data["enforcement-late-application"] == "Yes" %}
+          {% if data["enforcement-application"] == "Yes" %}
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
                 Planning application submitted
