--- a/app/views/enforcement/v1/grounds/groundE-text.html
+++ b/app/views/enforcement/v1/grounds/groundE-text.html
@@ -72,7 +72,7 @@
           }) }}
         {% else %}
           {{ govukButton({
-            href: "late-application",
+            href: "application",
             text: "Continue"
           }) }}
         {% endif %}
