--- a/app/views/appellant-submission/v14/full/planning-application-documents/certificates.html
+++ b/app/views/appellant-submission/v14/full/planning-application-documents/certificates.html
@@ -72,13 +72,13 @@ Did you submit a separate ownership certificate and agricultural land declaratio
             </p>
             <ul class="govuk-list govuk-list--bullet">
               <li>
-                your application form did not have an ownership certificate section
+                your application form did not have an ownership certificate and agricultural holding declaration section
               </li>
               <li>
                 your local planning department asked for a separate document because of a mistake on your application form
               </li>
               <li>
-                you chose to submit a separate ownership certificate section
+                you chose to submit a separate ownership certificate and agricultural land declaration
               </li>
             </ul>
             <p class="govuk-body">
@@ -86,42 +86,7 @@ Did you submit a separate ownership certificate and agricultural land declaratio
             </p>
           </div>
         </details>
-<!--
-        <span class="govuk-caption-l">
-          Upload documents from your planning application
-        </span>
-
-        {{ govukRadios({
-          idPrefix: "appealsub-"+version+"-applicationdocs-certificates",
-          name: "appealsub-"+version+"-applicationdocs-certificates",
-          fieldset: {
-            legend: {
-              text: "Does the application form include site ownership and agricultural holdings certificates?",
-              isPageHeading: true,
-              classes: "govuk-fieldset__legend--l"
-            }
-          },
-          hint: {
-            text: "Some local planning departments include these on the application form. Others ask you to submit these separately."
-          },
-          items: [
-            {
-              value: "Yes, my application form includes site ownership and agricultural holdings certificates",
-              text: "Yes, my application form includes site ownership and agricultural holdings certificates",
-              checked: checked("appealsub-"+version+"-applicationdocs-certificates", "Yes, my application form includes site ownership and agricultural holdings certificates")
-            },
-            {
-              value: "No, I submitted these separately",
-              text: "No, I submitted these separately",
-              checked: checked("appealsub-"+version+"-applicationdocs-certificates", "No, I submitted these separately")
-            }
-          ]
-        }) }}
-
-        {{ govukButton({
-          text: "Continue"
-        }) }}
-      -->
+        
       </form>
 
     </div>
